<resources>
    <string name="app_name">AdvancedSlideLayout</string>

    <string name="pref_title_stick_container">Stick layout to</string>
    <string name="pref_title_transformer">Transformer</string>
    <string name="pref_title_enable_preview_mode">Enable preview mode</string>
    <string name="pref_title_show_shadow">Show shadow</string>
    <string name="pref_title_show_offset">Closed offset</string>
    <string name="open_button_container">Open</string>
    <string name="close_button_container">Close</string>
    <string name="swipe_label">Swipe</string>
    <string name="swipe_left_label">Swipe left</string>
    <string name="swipe_right_label">Swipe right</string>
    <string name="swipe_up_label">Swipe up</string>
    <string name="swipe_down_label">Swipe down</string>
    <string name="label_right">Right</string>
    <string name="label_left">Left</string>
    <string name="label_top">Top</string>
    <string name="label_bottom">Bottom</string>
    <string name="label_none">None</string>
    <string name="label_alpha">Alpha</string>
    <string name="label_rotation">Rotation</string>
    <string name="label_slide_joy">Slide Joy</string>
    <string name="not_applicable">n/a</string>
    <string-array name="pref_list_titles">
        <item>@string/label_right</item>
        <item>@string/label_left</item>
        <item>@string/label_top</item>
        <item>@string/label_bottom</item>
    </string-array>
    <string-array name="pref_list_values">
        <item>right</item>
        <item>left</item>
        <item>top</item>
        <item>bottom</item>
    </string-array>
    <string-array name="pref_transform_list_titles">
        <item>@string/label_none</item>
        <item>@string/label_alpha</item>
        <item>@string/label_rotation</item>
        <item>@string/label_slide_joy</item>
    </string-array>
    <string-array name="pref_transform_list_values">
        <item>none</item>
        <item>alpha</item>
        <item>rotation</item>
        <item>slide</item>
    </string-array>
    <string name="pref_go">Go</string>
</resources>
